# KlavierApp

./: .gitignore  IMPLEMENTATION_GUIDE.md  README.md  SUMMARY.md  create_test_students.sh  docker-compose.yml  musikschule_app  musikschule_app.pub
.github/workflows/: deploy.yml
backend/: .gitignore  Cargo.toml  Dockerfile
backend/migrations/: 20260209000000_create_users_table.sql  20260215000000_create_push_tokens.sql  20260215000000_drop_students_address.sql  20260218000000_add_free_answer_hometask_type.sql  20260218010000_add_student_groups.sql  20260219000000_add_notification_cleanup_pg_cron.sql
backend/src/: admin.rs  chats.rs  email.rs  feeds.rs  groups.rs  hometasks.rs  lib.rs  main.rs  media.rs  notification_builders.rs  notifications.rs  password_reset.rs  push.rs  registration_tokens.rs  roles.rs  storage.rs  users.rs  websockets.rs
backend/src/models/: hometask.rs  mod.rs
backend/src/roles/: helpers.rs  models.rs  parent.rs  student.rs  teacher.rs
deploy/: .env.example  BACKUP_INSTRUCTIONS.md  Caddyfile  README.md  backup_prod.sh  cloud-init.yaml  docker-compose.prod.yml  resend_group_post_notifications.sh  resend_group_post_notifications_prod.sh  upload-keystore.jks
frontend/: README.md  l10n.yaml  pubspec.yaml
frontend/.dart_tool/: package_config.json  package_graph.json
frontend/assets/: config.json  consent.txt  consent_de.txt  consent_en.txt  consent_ru.txt
frontend/lib/: admin_panel.dart  auth.dart  chat_screen.dart  dashboard_screen.dart  feeds_screen.dart  firebase_options.dart  home_screen.dart  hometasks_screen.dart  login_screen.dart  main.dart  notifications_screen.dart  (+3 more)
(+73 files in other folders)
